--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "weather-app",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "default": "index.js",
   "scripts": {
     "start": "npx parcel index.html",
-    "build": "npx parcel build index.html"
+    "build": "npx parcel build index.html --dist-dir ./dist"
   },
   "author": "Amirabas Nasirzadeh",
   "license": "ISC",
